--- a/project.css
+++ b/project.css
@@ -6,12 +6,18 @@ body {
 }
 
 .container {
-  max-width: 400px;
+
+  background-color: rgba(255, 255, 255, 0.5);
+  /* Adjust the alpha value (0.5 in this case) to control transparency */
+  padding: 20px;
+  border-radius: 12px ;
+  /* Example border style */
+  /* max-width: 400px;
   margin: 100px auto;
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); */
 }
 
 .login-form {
